--- a/computationalneuroscience/tex/final.bib
+++ b/computationalneuroscience/tex/final.bib
@@ -65,6 +65,14 @@ year = 1989,
 pages = "626--641"
 }
 
+@article{Poggio,                  
+author = "Maximilian Riesenhuber and Tomaso Poggio",
+title = "Hierarchical models of object recognition in cortex",
+journal = "Nature Neuroscience",
+volume = 2,
+year = 1999
+}
+
 @book{Buzsaki,
 author = "Gyorgy Buzsaki",
 title = "Rhythms of the Brain",
