--- a/systemstheory/tex/homework5.tex
+++ b/systemstheory/tex/homework5.tex
@@ -71,14 +71,52 @@ literate=*{:}{{\textcolor{blue}:}}{1}%
 The system from figure 5.3 is rather simple, with a connection matrix of
 
 \[ \left( \begin{array}{cccc}
-1 & 0 & 0 & 1 \cr
-1 & 0 & 0 & 1 \cr
-1 & 0 & 0 & 1 \cr
+0.5 & 0 & 0 & 0.5 \cr
+0.5 & 0 & 0 & 0.5 \cr
+0.5 & 0 & 0 & 0.5 \cr
 0 & 0 & 1 & 0 \end{array} \right)\]
 
 The first three states are identical in what their next possible states are, and the last has only one next state.  In terms of Hartley uncertainty
 
 $$ I(A)=K\log_b|A| $$
+
+So, for time t+1 the uncertainty for each state is $[1,1,1,0]$ (in bits per the base 2), as there are 2 states for each except the last, which is with utmost certainty transitioning to c.
+
+For time t+2 and beyond, all 3 reachable states are possible from all starting states except d, so the uncertainty is $\log_2(3)=1.5849625$.  For d at t+2 it can only reach a or d, but not c, so its uncertainty is 1 bit.  From that point onward it is the same as the others.  State d can be seen as identical to the others in uncertainty except for being one time step delayed.
+
+Each sequence of states for $[t,t+1,t+2...t+n]$ has an uncertainty according to 
+
+$$ \sum_{k=1}^n{\log_2(s_{t+k})} $$
+
+for $s \in [a,b,c,d]$.  For a this is 
+
+$$ t+1=1 $$
+$$ t+2=1.5849625 $$
+$$ t+3=1.5849625 $$ 
+
+and so on.  This turns out to be the simple formula 
+
+$$ 1+1.5849625(n-1) $$ 
+
+All the others are the same except d, which is once again delayed by one step.  Its uncertainty is given by 
+
+$$ 1+1.5849625(n-2) $$ 
+
+\section{Exercise 8.3}
+
+This exercise is much the same as the last one, except instead of Hartley uncertainty we have Shannon uncertainty, with different probabilities for each next time step.  This connection matrix is given by
+
+\[ \left( \begin{array}{cccc}
+0.2 & 0 & 0.8 & 0 \cr
+0 & 0 & 0 & 1 \cr
+0 & 0.9 & 0 & 0.1 \cr
+0.5 & 0.3 & 0.2 & 0 \end{array} \right)\]
+
+For a, the uncertainty for the next time step is 
+
+$$ -\sum{p(x)\log_2{p(x)}}=0.2*\log_2{0.2}+0.8*\log_2{0.8}=0.7219281 $$
+
+So, not quite one bit.  The rest of the uncertainties can be found in a similar fashion.
 
 \end{document} 
 
