--- a/neuralnetworks/tex/finalreport.tex
+++ b/neuralnetworks/tex/finalreport.tex
@@ -66,15 +66,23 @@ literate=*{:}{{\textcolor{blue}:}}{1}%
 \begin{document}
 \maketitle
 
+\section{Abstract}
+
+
+
+\section{Introdution/Background on LVQ}
+
+
+
 \section{Problem Statement}
 
 The problem for this project is, given the training data set of 52 features and using the LVQ neural network paradigm, discover the smallest subset of features that enables the network to correctly classify the data above 90\% of the time.  It is claimed that 9 features is sufficient for the network to achieve these results, and that even smaller subsets are possible.  My task is to find this minimal subset.
 
-\section{Background on LVQ}
-
-
-
 \section{Experimental Process}
+
+
+
+\section{Conclusion}
 
 
 
