--- a/neuralnetworks/tex/logbook.tex
+++ b/neuralnetworks/tex/logbook.tex
@@ -76,11 +76,11 @@ You have been warned.
 
 \subsection{Before the Experiment Begins}
 
-\subsubsection{The Pain and Pointlessness of NeuralWare}
+\subsubsection{The Pain and Pointlessness of NeuralWorks}
 
-First off I must get this out of the way: I am frustrated with NeuralWare.  
+First off I must get this out of the way: I am frustrated with NeuralWorks.  
 
-I am puzzled what it is the goal of NeuralWare truly was as intended by its makers, as none of the possible roles of software I can imagine is it even remotely suited to filling.  It is dense and full of an endlessly cryptic labyrinth of menus and fields and dialog boxes, so it can't be intended as an educational tool.  It is clumsy to actually accomplish a task as each act requires multiple navigations, and bulk tasks like running fifteen trials and comparing them each require multiple mechanical steps and external computation and graphing to process the information, so it can't be intended as an actual productive tool that humans are supposed to use.  At the same time, there is no way to use NW as a component in other toolchains, from other programming languages for instance, without manually doing the steps yourself to process the inputs and obtain the outputs (I found the User-Defined Input and Output feature it offers, but this is only to build functions that can be run from \emph{within} NW, you still have to navigate through the menus and interact with the GUI frontend to get any work done.  Also, you must operate within NW's traditional initialization and training cycle, performing functions though callbacks that are called only at certain times under certain conditions.  There is no way to use any NW functionality from a program external to NW, which is what would actually be useful).  There is no way to automate tasks programmatically or access functionality thanks to its closed source proprietary nature, and the manual labor of getting results is laborious, so it can't be intended as a programming tool that could be used in conjunction with other computational environments except in the most superficial sense.  Also, it does not appear to have been updated since 2001 (a whole decade!) and the owners are still charging comparable rates to a time when they were actually working on it.  In the meantime many things have happened in ten years, and there are open source tools freely available which are libraries that can be included in other projects, that are readable and editable by anyone (and therefore open to academic inquiry and useful for education), and have thriving contributor bases from all over the world and are being actively maintained (FANN comes to mind, but there are many others).  I am baffled as to how NW can be considered a legitimate platform for anything beyond tinkering and experimentation, and am equally baffled as to why using NW is considered an engineering endeavor.  
+I am puzzled what it is the goal of NeuralWorks truly was as intended by its makers, as none of the possible roles of software I can imagine is it even remotely suited to filling.  It is dense and full of an endlessly cryptic labyrinth of menus and fields and dialog boxes, so it can't be intended as an educational tool.  It is clumsy to actually accomplish a task as each act requires multiple navigations, and bulk tasks like running fifteen trials and comparing them each require multiple mechanical steps and external computation and graphing to process the information, so it can't be intended as an actual productive tool that humans are supposed to use.  At the same time, there is no way to use NW as a component in other toolchains, from other programming languages for instance, without manually doing the steps yourself to process the inputs and obtain the outputs (I found the User-Defined Input and Output feature it offers, but this is only to build functions that can be run from \emph{within} NW, you still have to navigate through the menus and interact with the GUI frontend to get any work done.  Also, you must operate within NW's traditional initialization and training cycle, performing functions though callbacks that are called only at certain times under certain conditions.  There is no way to use any NW functionality from a program external to NW, which is what would actually be useful).  There is no way to automate tasks programmatically or access functionality thanks to its closed source proprietary nature, and the manual labor of getting results is laborious, so it can't be intended as a programming tool that could be used in conjunction with other computational environments except in the most superficial sense.  Also, it does not appear to have been updated since 2001 (a whole decade!) and the owners are still charging comparable rates to a time when they were actually working on it.  In the meantime many things have happened in ten years, and there are open source tools freely available which are libraries that can be included in other projects, that are readable and editable by anyone (and therefore open to academic inquiry and useful for education), and have thriving contributor bases from all over the world and are being actively maintained (FANN comes to mind, but there are many others).  I am baffled as to how NW can be considered a legitimate platform for anything beyond tinkering and experimentation, and am equally baffled as to why using NW is considered an engineering endeavor.  
 
 I am also frustrated that I asked to be able to develop my own algorithm for the LVQ, which would have been far more instructive and useful than merely creating something through InstaNet, and was refused.  Using NW is painful and not conducive to learning or productively conducting research.  I feel that the inability to programmatically conduct research and compose functionality in novel ways is a huge obstacle to obtaining results, and renders what could be an enjoyable endeavor into a task of suffering and exasperation.  
 
@@ -88,8 +88,9 @@ I came into this class excited about learning about neural networks and putting 
 
 \subsubsection{Life After the NeuralWorks Rant}
 
-Okay, now that I have that off my chest, I can get started.  The first step is to learn about the LVQ sufficiently to know what it is I am doing.  
+Okay, now that I have that off my chest, I can get started.  The first step is to learn about the LVQ sufficiently to know what it is I am doing.  The similarity between the LVQ and SOM (and common heritage) means that many of the resources for the LVQ also overlap with those for the SOM.  
 
+Now that that is done, the task is to actually run the first set of experiments with all 52 of the available features.  
 
 \end{document}  
 
